First part of Bug 142123 thread safety assertions when doing import into address books (ASSERTION: morkObject not thread-safe). r/sr=bienvenu